# AI-EMPLOYEE

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  AGENT_COMMUNICATION_PROTOCOL.md  AGENT_DELIVERABLES.md  AGENT_PROMPT_TEMPLATE.md  ASCENDFORGE_PHASE_2.5_SUMMARY.md  ASCENDFORGE_SYSTEM_AUDIT.md  ASCENDFORGE_USER_GUIDE.md  ASCEND_FORGE_AI_ENGINEER_AUDIT.md  BEFORE_AFTER.md  CENTRAL_COGNITIVE_CORE_DELIVERY.md  CLAUDE.md  CODEX_INTEGRATION.md  CODEX_UI_FILES.txt  CODEX_UI_IMPLEMENTATION.md  CONTRIBUTING.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DATABASE_QUICK_START.md  DATABASE_README.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  Dockerfile  EFFICIENCY_REPORT.md  ENTERPRISE_READINESS_100.md  EXAMPLES.md  GETTING_STARTED.md  INSTALL.md  LAUNCHER_FIXES.md  LICENSE  MILLION_DOLLAR_ROADMAP.md  Naamloos document  PAPERCLIP_COMPARISON.md  PHASE2_COMPLETE.md  PHASE3.2-SUMMARY.txt  PHASE4_BUILD_COMPLETE.txt  PHASE4_COMPLETE.txt  (+77 more)
.claude/: settings.json
AI/: AI-Memory-Log.md
ascend-ai/: start.bat  start.sh
ascend-ai-archived/: requirements.txt  start.sh
backend/: conversations.js  database.js  forge_train.py  money_mode.js  package-lock.json  package.json  persistence.js  py_worker_client.js  python_worker.py  routing.js  run_execution.py  run_forge.py  server.js  state-paths.js  tenancy.js
config/: voice.json
deploy/: blue-green.sh  build.sh  deploy.sh  dr-restore.sh  rollback.sh  smoke-test.sh
docs/: ASCENDFORGE_IMPLEMENTATION_PLAN.md  ASCENDFORGE_POLYGLOT_RESEARCH.md  ASCENDFORGE_V2_V3_IMPLEMENTATION_PLAN.md  ASCEND_FORGE_UI_V3_AUDIT.md  ASCEND_FORGE_V5_FULL_STACK_INTEGRATION_AUDIT.md  ASCEND_FORGE_V5_FULL_STACK_INTEGRATION_IMPLEMENTATION.md  ASCEND_FORGE_V6_VERIFICATION_AND_FIX_REPORT.md  ASCEND_FORGE_V6_VERIFICATION_AND_HARDENING_AUDIT.md  ASCEND_FORGE_V7_CONTROLLED_EXECUTION_AUDIT.md  ASCEND_FORGE_V7_CONTROLLED_EXECUTION_IMPLEMENTATION.md  AUDIT.md  COMPANYOS_DESIGN.md  DESKTOP_APP_PLAN.md  ENTERPRISE_AGENT_EXECUTION_PLAN.md  ENTERPRISE_BUNDLING_SECURITY_PLAN.md  ENTERPRISE_DESKTOP_APP_PLAN.md  ENTERPRISE_UI_REVIEW_AND_RECON_BACKLOG.md  FORK_ENRICHMENT_IMPLEMENTATION_ROADMAP.md  GAP_ANALYSIS_2026_06_30.md  LOCAL_QUANTIZATION_AND_MODEL_ORCHESTRATION_PLAN.md  MASTER_PLAN.md  MASTER_PLAN_V3.md  MASTER_TASK_LIST.md  MODEL_ORCHESTRATION_PLAN.md  MODULE_MAP.md  NEURAL_OS_RESEARCH.md  ORDERS_MONEY_PIPELINE_AUDIT.md  (+29 more)
src-tauri/: Cargo.toml  bundle.linux.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+2570 files in other folders)
