[package]
name = "nexus-os"
version = "2.0.0"
edition = "2021"

[lib]
name = "nexus_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nexus-os"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
