[package]
name = "nexus-os"
version = "0.1.0"
description = "Nexus OS — Aethernus Nexus desktop shell"
authors = ["F-game25"]
license = "MIT"
repository = "https://github.com/F-game25/AI-EMPLOYEE"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nexus_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nexus-os"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
getrandom = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
